<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBlanco"
        android:orientation="vertical"
        android:layout_margin="26dp"
        android:padding="18dp">
        <TextView
            android:id="@+id/dialog_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_alert_title"
            android:textColor="@color/colorAzul"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/dialog_txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/dialog_alert_message"
            android:textAppearance="@style/TextAppearance.FontLight"
            android:textColor="@color/colorAzul"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:text="@string/dialog_alert_cancelar"
                android:textAllCaps="true"
                android:textColor="@color/colorAzulElectrico"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/dialog_btn_aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="24dp"
                android:clickable="true"
                android:text="@string/dialog_alert_aceptar"
                android:textAllCaps="true"
                android:textColor="@color/colorAzulElectrico"
                android:textSize="14sp"/>

        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>