<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/barlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAzul"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_background">

            <LinearLayout
                android:id="@+id/layout_obra_detalles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_titulo_obra"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@color/colorBlanco"
                            android:gravity="center_vertical"
                            android:maxLines="2"
                            android:paddingLeft="25dp"
                            android:paddingRight="10dp"
                            android:text="Obra: "
                            android:textColor="@color/colorAzul"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/shadow" />
                    </RelativeLayout>
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="9"
                    android:background="@color/colorBlanco"
                    android:paddingBottom="16dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextViewFormulario"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/productos_fecha_inicio_obra" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/citas_obligatorio"
                                android:textColor="@color/colorRojo" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/etx_fecha_inicio_obra"
                            style="@style/HintEditTextFormulario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:focusable="false"
                            android:hint="@string/productos_fecha_inicio_obra_hint"
                            android:singleLine="true" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextViewFormulario"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/productos_duracion_meses" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/citas_obligatorio"
                                android:textColor="@color/colorRojo" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/etx_duracion_meses"
                            style="@style/HintEditTextFormulario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/productos_duracion_meses_hint"
                            android:inputType="number"
                            android:maxLength="5"
                            android:singleLine="true" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextViewFormulario"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/productos_meses_restantes" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/citas_obligatorio"
                                android:textColor="@color/colorRojo" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/etx_meses_restantes"
                            style="@style/HintEditTextFormulario"
                            android:layout_width="299dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/productos_meses_restantes_hint"
                            android:inputType="number"
                            android:maxLength="5"
                            android:singleLine="true" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/colorGrisBorde" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/productos_estatus_obra"
                                android:textColor="@color/colorAzul" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/citas_obligatorio"
                                android:textColor="@color/colorRojo" />
                        </LinearLayout>

                        <Spinner
                            android:id="@+id/sp_estatus_obra"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/colorGrisBorde" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:text="@string/productos_tipo_obra"
                                android:textColor="@color/colorAzul" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/citas_obligatorio"
                                android:textColor="@color/colorRojo" />
                        </LinearLayout>


                        <Spinner
                            android:id="@+id/sp_obra"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/colorGrisBorde" />

                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:id="@+id/foot_descarga"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/archivos_custom_border_button"
                    android:divider="@drawable/nav_custom_divider"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <LinearLayout
                        android:id="@+id/btn_cancelar_obra"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="6"
                            android:gravity="center"
                            android:text="@string/btn_cancelar"
                            android:textAppearance="@style/TextAppearance.FontBold"
                            android:textColor="@color/colorBlanco"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_guardar_obra"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="6"
                            android:gravity="center"
                            android:text="@string/btn_guardar"
                            android:textAppearance="@style/TextAppearance.FontBold"
                            android:textColor="@color/colorBlanco"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>